# typed_script

./: Cargo.toml  README.md  flake.nix  llvmmlir.nix  llvmtest.txt  llvmtest2.txt  mlir.nix  mlirtest.txt  shell.nix
crates/compiler/: Cargo.toml  mlirtest.txt  spec.md
ir_test_programs/: test_addition.ts  test_arrays.ts  test_borrow.ts  test_borrow_after_loop.ts  test_borrow_existing_variable_after_loop.ts  test_if.ts  test_if_else.ts  test_if_else_borrow_in_both_branches.ts  test_if_else_three.ts  test_if_else_two.ts  test_loop_borrow.ts  test_loop_borrow_and_move.ts  test_loop_move.ts  test_move_existing_variable_after_loop.ts  test_print.ts  test_print_double_move.ts
src/: codegen.rs  compiler.rs  control_flow_graph.rs  identifiers.rs  ir.rs  lib.rs  main.rs  parser.rs  scoped_progam.rs  typed_ast.rs  typed_script.pest
src/DataBase/: mod.rs
src/analysis/: borrow_checker.rs  free_dead_resources.rs  ir_transformer.rs  liveness_analysis.rs  mod.rs  pipeline.rs  type_evaluation.rs
src/ast/: declarations.rs  identifiers.rs  mod.rs  parser.rs  scopes.rs
src/cli/: mod.rs
src/snapshots/: fusion__ir__test__test_well_formed_ir_test_addition.ts.snap  (+48 more)
src/types/: mod.rs
test_programs/: hello_world.ts  if_else.ts  ignored_test_struct.ts  libc.ts  prinln.ts  print.ts  struct.ts  test_addition.ts  test_division.ts  test_equality.ts  test_if_else.ts  test_if_statement.ts  test_multiplication.ts  test_operator_precedence.ts  test_print.ts  test_println.ts  test_return_values.ts  test_sprintf.ts  test_struct.ts  test_substraction.ts  test_while_loop.ts
tests/: e2e.rs
(+324 files in other folders)
