[package]
name = "typed_script"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.1", features = ["derive"] }
melior = "0.9.9"
mlir-sys = "0.2.0"
pest = "2.5.5"
pest_derive = "2.5.5"
